Process Hacker

1.9
 * NEW/IMPROVED:
 * FIXED:
   * #2911938 - "The given key was not present in the dictionary."
   * #2911957 - "The given key was not present in the dictionary."

1.8
 * NEW/IMPROVED:
   * Ability to set I/O priority for processes and threads
   * No more separate Assistant.exe executable required
   * Signature verification now works on x64
   * Now shows signer names (plus a Verified Signer column)
   * Added proper x64 support to structs reader
   * Added basic preprocessor to structs reader
   * WOW64 modules now appear in Handle/DLL searches
   * Small performance improvements
   * Editing object SACLs is now possible with KProcessHacker
 * FIXED:
   * #2902988 - "Toolbar not shown after saving options"
   * Find window and select thread sometimes not working

1.7
 * NEW/IMPROVED:
   * #2873973 - "Columns window improvements"
   * New settings system - settings can now be saved anywhere
   * Decreased memory and CPU usage
   * Process Hacker probably runs on Windows 2000 now
 * FIXED:
   * #2880368 - "Highlight Option dialog does not show current colors"
   * #2881084 - "System.ArgumentOutOfRangeException"
   * #2881951 - "Invalid cursor handle."
   * #2891748 - "Prompt box resize behaviour"
   * #2891754 - "Exception in read/write memory if memory list is empty"
   * #2891760 - ""Select All" menu in memory tab not working"
   * Fixed some crashes on 64-bit when viewing thread stacks
   * Remaining network list bugs

1.6
 * NEW/IMPROVED:
   * #2817429 - "Add Port and IP Address columns to Network tab"
   * #2845829 - "System uptime"
   * #2853452 - "Find handles window: Minor usability improvements"
   * KProcessHacker support for Windows Server 2003
   * Update system
   * Network tools: ping, traceroute and whois
   * Object security editor
   * Displays IPv6 network connections
   * VirusTotal uploader
   * Two new terminator tests: W1 (send WM_DESTROY messages) and 
     W2 (send WM_QUIT messages)
   * Wait chain analysis